# rock3d.cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-3RD-PARTY.txt  LICENSE.txt  shader.ps1  vcpkg.json  vcpkg_sources.ps1
cmake/: Rock3DShaders.cmake  RockLib.cmake
include/rock3d/: assets.h  engine.h  level.h  platform.h  random.h  renderUtils.h  rock3d.h  util.h
rock3d/: assets.cpp  assets.h  bit.h  engine.cpp  engine.h  event.cpp  event.h  level.cpp  level.h  mathlib.h  platform.h  platform_win32.cpp  random.cpp  random.h  renderUtils.cpp  resource.cpp  resource.h  rock3d.h
rock3d/r3d/: render.cpp  render.h  textures.cpp  textures.h
rock3d/r3d/shaders/world/: vert.sc
rocked/: imgui_impl_bgfx.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_rock3d.cpp  imgui_rock3d.h  main.cpp  rocked.cpp  rocked.h
src/: assets.cpp  engine.cpp  event.cpp  level.cpp  platform_win32.cpp  random.cpp  renderUtils.cpp
src/r3d/: render.cpp  textures.cpp
src/r3d/shaders/world/: frag.sc  varying.def.sc
tools/: build_assets.py
